# fuzzing-android-librairies

./: .gitignore  README.md  tree.txt
Sloth/: Dockerfile
Sloth/resources/examples/Skia/jni/: Android.mk  Makefile
Sloth/resources/examples/Skia/libs/arm64-v8a/: boofuzz
Sloth/resources/examples/libjpeg/: tree.txt
Sloth/resources/examples/libjpeg/jni/: Android.mk  Application.mk  Makefile  jpegfuzz.cpp
Sloth/resources/examples/libjpeg/jni/lib/: fuzz.cpp  fuzz.h
Sloth/resources/examples/libjpeg/jni/libjpeg/: jconfig.h
Sloth/src/: fuzz_runner.py
Sloth/src/test/: input1  input2  input3  input4  input5  input6  input7  input8  input9
fuzzer_libjpeg/: CMakeLists.txt  harness_libjpeg  harness_libjpeg.c
fuzzer_libjpeg/harness_libjpeg.dSYM/Contents/: Info.plist
fuzzer_libjpeg/harness_libjpeg.dSYM/Contents/Resources/Relocations/aarch64/: harness_libjpeg.yml
